finish the momentum dev notebook.

--- a/docs/research/momentum_dev.ipynb
+++ b/docs/research/momentum_dev.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -110,13 +101,6 @@
     "ctsJump = jm.ContinuousJumpModel()\n",
     "best_states, best_loss, best_thetas = ctsJump.fit(enriched_returns, k=2, lambda_=100, n_trials=10)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -223,7 +207,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Momentum Strategy Performance under Different Regimes"
+    "# Momentum strategy under regimes"
    ]
   },
   {
@@ -245,13 +229,6 @@
    "source": [
     "momentum_signal = qb.generate_ts_momentum_signal(test_ret, 20)\n",
     "qb.plot_price_with_signal(test_price, momentum_signal, figsize=(8, 4));"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Momentum strategy under regimes"
    ]
   },
   {
@@ -405,23 +382,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## OU Process on the Excess Return"
+    "## OU Process on the Excess Return\n",
+    "\n",
+    "This approach assumes that the cumulative excess return series is staionary and follows a mean reversion pattern that can be modeled by an OU process. So there are two steps here.\n",
+    "\n",
+    "- A benchmark model to get the excess return - we use the FF five factors which are easy to get.\n",
+    "- Get the rolling OU process parameters. This is essentially done by using its equivalence with an AR(1) model.\n",
+    "\n",
+    "The solution of OU process at any time is actually a variable of Normal distribution and that is how we can find the degree of deviation."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -429,10 +404,7 @@
     "import statsmodels.api as sm\n",
     "from collections import namedtuple\n",
     "import matplotlib.pyplot as plt\n",
-    "import quantbullet as qb\n",
-    "\n",
-    "%load_ext autoreload\n",
-    "%autoreload 2"
+    "import quantbullet as qb"
    ]
   },
   {
@@ -455,6 +427,13 @@
     "calendar = qb.BacktestingCalendar(tsla.index)\n",
     "ff5_provider = qb.SimpleDataProvider(ff5)\n",
     "tsla_provider = qb.SimpleDataProvider(tsla_log_ret)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Below is the first step of getting excess returns."
    ]
   },
   {
@@ -499,6 +478,13 @@
     "cum_excess_return = df['cum_excess_return']\n",
     "calendar = qb.BacktestingCalendar(cum_excess_return.index)\n",
     "excess_return_provider = qb.SimpleDataProvider(cum_excess_return)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The second step is to estimate the OU parameters and construct the upper and lower bounds."
    ]
   },
   {
@@ -853,327 +839,6 @@
     "ax2.plot(df['state_1_mr_cum_return'])\n",
     "\n",
     "plt.xlim(pd.Timestamp('2021-01-01'), pd.Timestamp('2023-12-31'));"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 300,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>price</th>\n",
-       "      <th>rolling_mean</th>\n",
-       "      <th>rolling_std</th>\n",
-       "      <th>upper_band</th>\n",
-       "      <th>lower_band</th>\n",
-       "      <th>deviation</th>\n",
-       "      <th>signal</th>\n",
-       "      <th>position</th>\n",
-       "      <th>simple_return</th>\n",
-       "      <th>cum_return</th>\n",
-       "      <th>train_test_flag</th>\n",
-       "      <th>state_probs</th>\n",
-       "      <th>state_0_mr_return</th>\n",
-       "      <th>state_0_mr_cum_return</th>\n",
-       "      <th>state_1_mr_return</th>\n",
-       "      <th>state_1_mr_cum_return</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Date</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2021-03-09</th>\n",
-       "      <td>224.526672</td>\n",
-       "      <td>250.910056</td>\n",
-       "      <td>30.938911</td>\n",
-       "      <td>312.787878</td>\n",
-       "      <td>189.032233</td>\n",
-       "      <td>-0.852757</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.196412</td>\n",
-       "      <td>0.272888</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.993666</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1.058772</td>\n",
-       "      <td>0.196412</td>\n",
-       "      <td>1.196412</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-11-01</th>\n",
-       "      <td>402.863342</td>\n",
-       "      <td>263.656724</td>\n",
-       "      <td>37.421515</td>\n",
-       "      <td>338.499754</td>\n",
-       "      <td>188.813693</td>\n",
-       "      <td>3.719962</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>0.084910</td>\n",
-       "      <td>0.198922</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.669149</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.843407</td>\n",
-       "      <td>-0.084910</td>\n",
-       "      <td>1.094824</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-11-02</th>\n",
-       "      <td>390.666656</td>\n",
-       "      <td>266.202501</td>\n",
-       "      <td>40.693585</td>\n",
-       "      <td>347.589671</td>\n",
-       "      <td>184.815331</td>\n",
-       "      <td>3.058569</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>-0.030275</td>\n",
-       "      <td>0.204944</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.887840</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.843407</td>\n",
-       "      <td>0.030275</td>\n",
-       "      <td>1.127970</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-11-03</th>\n",
-       "      <td>404.619995</td>\n",
-       "      <td>269.001779</td>\n",
-       "      <td>44.248678</td>\n",
-       "      <td>357.499136</td>\n",
-       "      <td>180.504423</td>\n",
-       "      <td>3.064910</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>0.035717</td>\n",
-       "      <td>0.197624</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.993666</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.843407</td>\n",
-       "      <td>-0.035717</td>\n",
-       "      <td>1.087683</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-11-04</th>\n",
-       "      <td>409.970001</td>\n",
-       "      <td>271.902279</td>\n",
-       "      <td>47.620137</td>\n",
-       "      <td>367.142554</td>\n",
-       "      <td>176.662005</td>\n",
-       "      <td>2.899356</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>0.013222</td>\n",
-       "      <td>0.195011</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.993666</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.843407</td>\n",
-       "      <td>-0.013222</td>\n",
-       "      <td>1.073301</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-11-05</th>\n",
-       "      <td>407.363342</td>\n",
-       "      <td>274.679168</td>\n",
-       "      <td>50.541062</td>\n",
-       "      <td>375.761293</td>\n",
-       "      <td>173.597044</td>\n",
-       "      <td>2.625275</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>-0.006358</td>\n",
-       "      <td>0.196251</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.993666</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.843407</td>\n",
-       "      <td>0.006358</td>\n",
-       "      <td>1.080125</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-11-08</th>\n",
-       "      <td>387.646667</td>\n",
-       "      <td>277.155668</td>\n",
-       "      <td>52.373212</td>\n",
-       "      <td>381.902093</td>\n",
-       "      <td>172.409243</td>\n",
-       "      <td>2.109685</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>-0.048401</td>\n",
-       "      <td>0.205750</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.993666</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.843407</td>\n",
-       "      <td>0.048401</td>\n",
-       "      <td>1.132404</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-11-09</th>\n",
-       "      <td>341.166656</td>\n",
-       "      <td>279.029724</td>\n",
-       "      <td>52.621971</td>\n",
-       "      <td>384.273666</td>\n",
-       "      <td>173.785781</td>\n",
-       "      <td>1.180817</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>-0.119903</td>\n",
-       "      <td>0.230420</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.993666</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.843407</td>\n",
-       "      <td>0.119903</td>\n",
-       "      <td>1.268183</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-11-10</th>\n",
-       "      <td>355.983337</td>\n",
-       "      <td>281.264390</td>\n",
-       "      <td>53.000488</td>\n",
-       "      <td>387.265366</td>\n",
-       "      <td>175.263415</td>\n",
-       "      <td>1.409778</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>0.043429</td>\n",
-       "      <td>0.220413</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.993666</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.843407</td>\n",
-       "      <td>-0.043429</td>\n",
-       "      <td>1.213106</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-11-11</th>\n",
-       "      <td>354.503326</td>\n",
-       "      <td>283.345057</td>\n",
-       "      <td>53.389450</td>\n",
-       "      <td>390.123958</td>\n",
-       "      <td>176.566156</td>\n",
-       "      <td>1.332815</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>-0.004158</td>\n",
-       "      <td>0.221329</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.993666</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.843407</td>\n",
-       "      <td>0.004158</td>\n",
-       "      <td>1.218150</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                 price  rolling_mean  rolling_std  upper_band  lower_band  \\\n",
-       "Date                                                                        \n",
-       "2021-03-09  224.526672    250.910056    30.938911  312.787878  189.032233   \n",
-       "2021-11-01  402.863342    263.656724    37.421515  338.499754  188.813693   \n",
-       "2021-11-02  390.666656    266.202501    40.693585  347.589671  184.815331   \n",
-       "2021-11-03  404.619995    269.001779    44.248678  357.499136  180.504423   \n",
-       "2021-11-04  409.970001    271.902279    47.620137  367.142554  176.662005   \n",
-       "2021-11-05  407.363342    274.679168    50.541062  375.761293  173.597044   \n",
-       "2021-11-08  387.646667    277.155668    52.373212  381.902093  172.409243   \n",
-       "2021-11-09  341.166656    279.029724    52.621971  384.273666  173.785781   \n",
-       "2021-11-10  355.983337    281.264390    53.000488  387.265366  175.263415   \n",
-       "2021-11-11  354.503326    283.345057    53.389450  390.123958  176.566156   \n",
-       "\n",
-       "            deviation  signal  position  simple_return  cum_return  \\\n",
-       "Date                                                                 \n",
-       "2021-03-09  -0.852757     NaN         1       0.196412    0.272888   \n",
-       "2021-11-01   3.719962    -1.0        -1       0.084910    0.198922   \n",
-       "2021-11-02   3.058569    -1.0        -1      -0.030275    0.204944   \n",
-       "2021-11-03   3.064910    -1.0        -1       0.035717    0.197624   \n",
-       "2021-11-04   2.899356    -1.0        -1       0.013222    0.195011   \n",
-       "2021-11-05   2.625275    -1.0        -1      -0.006358    0.196251   \n",
-       "2021-11-08   2.109685    -1.0        -1      -0.048401    0.205750   \n",
-       "2021-11-09   1.180817     NaN        -1      -0.119903    0.230420   \n",
-       "2021-11-10   1.409778     NaN        -1       0.043429    0.220413   \n",
-       "2021-11-11   1.332815     NaN        -1      -0.004158    0.221329   \n",
-       "\n",
-       "            train_test_flag  state_probs  state_0_mr_return  \\\n",
-       "Date                                                          \n",
-       "2021-03-09                1     0.993666                NaN   \n",
-       "2021-11-01                1     0.669149                NaN   \n",
-       "2021-11-02                1     0.887840                NaN   \n",
-       "2021-11-03                1     0.993666                NaN   \n",
-       "2021-11-04                1     0.993666                NaN   \n",
-       "2021-11-05                1     0.993666                NaN   \n",
-       "2021-11-08                1     0.993666                NaN   \n",
-       "2021-11-09                1     0.993666                NaN   \n",
-       "2021-11-10                1     0.993666                NaN   \n",
-       "2021-11-11                1     0.993666                NaN   \n",
-       "\n",
-       "            state_0_mr_cum_return  state_1_mr_return  state_1_mr_cum_return  \n",
-       "Date                                                                         \n",
-       "2021-03-09               1.058772           0.196412               1.196412  \n",
-       "2021-11-01               0.843407          -0.084910               1.094824  \n",
-       "2021-11-02               0.843407           0.030275               1.127970  \n",
-       "2021-11-03               0.843407          -0.035717               1.087683  \n",
-       "2021-11-04               0.843407          -0.013222               1.073301  \n",
-       "2021-11-05               0.843407           0.006358               1.080125  \n",
-       "2021-11-08               0.843407           0.048401               1.132404  \n",
-       "2021-11-09               0.843407           0.119903               1.268183  \n",
-       "2021-11-10               0.843407          -0.043429               1.213106  \n",
-       "2021-11-11               0.843407           0.004158               1.218150  "
-      ]
-     },
-     "execution_count": 300,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df[(df['train_test_flag'] == 1) & (df['state_probs'] >= 0.5) & (df['position'] != 0)].head(10)"
    ]
   }
  ],
