--- a/docs/utils/testing.ipynb
+++ b/docs/utils/testing.ipynb
@@ -5,123 +5,51 @@
    "execution_count": 1,
    "id": "a60fbe83",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\yimin\\Documents\\GithubCodes\\quantbullet\\.venv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "import random\n",
-    "from datetime import timedelta"
+    "from datetime import timedelta, date\n",
+    "\n",
+    "import pandas as pd\n",
+    "from typing import Type\n",
+    "from abc import ABC, abstractmethod\n",
+    "\n",
+    "from quantbullet.utils.data import generate_fake_bond_trades\n",
+    "from quantbullet.model_selection.rolling_window import RollingWindowManager\n",
+    "from quantbullet.utils.consolidator import Consolidator\n",
+    "\n",
+    "from quantbullet.model import Model, Feature, FeatureSpec, FeatureRole, DataType"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "49663ab4",
+   "id": "6b33e1d5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Expand tickers to 50 and separate rating into its own column\n",
-    "\n",
-    "# Create 50 fake tickers\n",
-    "base_tickers = [f\"TICK{i:03}\" for i in range(1, 51)]\n",
-    "ratings = ['AAA', 'AA', 'A', 'BBB', 'BB', 'B']\n",
-    "date_range = pd.date_range(start=\"2024-01-01\", end=\"2024-03-31\", freq=\"D\")\n",
-    "\n",
-    "# Generate the full universe: all combinations of ticker and rating\n",
-    "universe = [(ticker, rating) for ticker in base_tickers for rating in ratings]\n",
-    "\n",
-    "records = []\n",
-    "for current_date in date_range:\n",
-    "    # For each rating, randomly pick 10–20 tickers to simulate trading on that day\n",
-    "    for rating in ratings:\n",
-    "        eligible_tickers = [ticker for ticker in base_tickers]\n",
-    "        traded_today = random.sample(eligible_tickers, k=random.randint(10, 20))\n",
-    "        for ticker in traded_today:\n",
-    "            expiry_date = current_date + timedelta(days=random.randint(30, 3650))\n",
-    "            features = np.random.normal(loc=0, scale=1, size=4)\n",
-    "            yield_value = 5 + features[0]*1 + features[1]*2 + np.random.normal(0, 0.5)\n",
-    "            records.append({\n",
-    "                'date': current_date,\n",
-    "                'ticker': f\"{ticker} {rating}\",\n",
-    "                'rating': rating,\n",
-    "                'feature_A': features[0],\n",
-    "                'feature_B': features[1],\n",
-    "                'feature_C': features[2],\n",
-    "                'feature_D': features[3],\n",
-    "                'expiry': expiry_date,\n",
-    "                'yield': yield_value\n",
-    "            })\n",
-    "\n",
-    "df_large = pd.DataFrame(records)\n"
+    "%load_ext autoreload\n",
+    "%autoreload 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "46b543e0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "from typing import Type\n",
-    "from abc import ABC, abstractmethod\n",
-    "from quantbullet.utils.consolidator import Consolidator\n",
-    "\n",
-    "class DataHandler:\n",
-    "    def __init__(self, df: pd.DataFrame, date_level_name: str = 'date'):\n",
-    "        if date_level_name not in df.index.names:\n",
-    "            raise ValueError(f\"'{date_level_name}' must be in the index names of the DataFrame.\")\n",
-    "        \n",
-    "        self._date_level = date_level_name\n",
-    "        self.df = df.sort_index()\n",
-    "        self.all_dates = self.df.index.get_level_values(self._date_level).unique().sort_values()\n",
-    "        self.return_flat = False\n",
-    "\n",
-    "    def get_window(self, end_date, window_size: int = None, use_full_history: bool = False) -> pd.DataFrame:\n",
-    "        \n",
-    "        end_date = Consolidator.to_time_stamp(end_date)\n",
-    "        if end_date not in self.all_dates:\n",
-    "            raise ValueError(f\"End date {end_date} not in available dates.\")\n",
-    "\n",
-    "        end_idx = self.all_dates.get_loc(end_date)\n",
-    "\n",
-    "        if use_full_history:\n",
-    "            window_dates = self.all_dates[: end_idx + 1]\n",
-    "        else:\n",
-    "            if window_size is None:\n",
-    "                raise ValueError(\"You must specify a window_size if use_full_history is False.\")\n",
-    "            if end_idx + 1 < window_size:\n",
-    "                raise ValueError(\"Not enough data for the requested window size.\")\n",
-    "            window_dates = self.all_dates[end_idx + 1 - window_size : end_idx + 1]\n",
-    "\n",
-    "        result = self.df.loc[self.df.index.get_level_values(self._date_level).isin(window_dates)]\n",
-    "        return self._format_return(result)\n",
-    "\n",
-    "\n",
-    "    def get_next_day_data(self, current_date) -> pd.DataFrame | None:\n",
-    "        current_date = Consolidator.to_time_stamp(current_date)\n",
-    "        idx = self.all_dates.get_loc(current_date)\n",
-    "        if idx + 1 >= len(self.all_dates):\n",
-    "            return None\n",
-    "        next_day = self.all_dates[idx + 1]\n",
-    "        result = self.df.loc[self.df.index.get_level_values(self._date_level) == next_day]\n",
-    "        return self._format_return(result)\n",
-    "    \n",
-    "    def _format_return(self, df: pd.DataFrame) -> pd.DataFrame:\n",
-    "        return df.reset_index() if self.return_flat else df\n",
-    "    \n",
-    "    @classmethod\n",
-    "    def from_flat( cls, df: pd.DataFrame, date_col: str = 'date'):\n",
-    "        if date_col not in df.columns:\n",
-    "            raise ValueError(f\"'{date_col}' must be a column in the DataFrame.\")\n",
-    "        \n",
-    "        df_sorted = df.sort_values(by=date_col)\n",
-    "        df_indexed = df_sorted.set_index(date_col)\n",
-    "        \n",
-    "        instance = cls(df_indexed, date_level_name=date_col)\n",
-    "        instance.return_flat = True\n",
-    "        return instance\n",
-    "\n",
     "class Model(ABC):\n",
     "    @abstractmethod\n",
     "    def fit(self, X, y):\n",
@@ -161,6 +89,7 @@
     "        self.logger = ResultLogger()\n",
     "\n",
     "    def run(self):\n",
+    "        \n",
     "        all_dates = sorted(self.data_handler.df.index.get_level_values('date').unique())\n",
     "        for i in range(self.window_size, len(all_dates) - 1):\n",
     "            current_date = all_dates[i]\n",
@@ -187,268 +116,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "8538d5c5",
+   "execution_count": 4,
+   "id": "0d0b172f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dh = DataHandler(df_large.set_index(['date', 'ticker']))\n",
-    "dh = DataHandler(df_large.set_index(['date']))\n",
-    "dh = DataHandler.from_flat(df_large, date_col='date')"
+    "START_DATE = date( 2025, 1, 1 )\n",
+    "END_DATE = date( 2025, 4, 30 )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "be27d38f",
+   "execution_count": 5,
+   "id": "539e7a5a",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>date</th>\n",
-       "      <th>ticker</th>\n",
-       "      <th>rating</th>\n",
-       "      <th>feature_A</th>\n",
-       "      <th>feature_B</th>\n",
-       "      <th>feature_C</th>\n",
-       "      <th>feature_D</th>\n",
-       "      <th>expiry</th>\n",
-       "      <th>yield</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2024-01-16</td>\n",
-       "      <td>TICK013 BBB</td>\n",
-       "      <td>BBB</td>\n",
-       "      <td>-0.822462</td>\n",
-       "      <td>-0.808287</td>\n",
-       "      <td>1.322948</td>\n",
-       "      <td>-0.431289</td>\n",
-       "      <td>2029-07-25</td>\n",
-       "      <td>3.313102</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2024-01-16</td>\n",
-       "      <td>TICK042 BBB</td>\n",
-       "      <td>BBB</td>\n",
-       "      <td>0.393233</td>\n",
-       "      <td>-1.110280</td>\n",
-       "      <td>-0.200273</td>\n",
-       "      <td>0.085599</td>\n",
-       "      <td>2026-03-11</td>\n",
-       "      <td>3.254585</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2024-01-16</td>\n",
-       "      <td>TICK040 BB</td>\n",
-       "      <td>BB</td>\n",
-       "      <td>0.191740</td>\n",
-       "      <td>1.010309</td>\n",
-       "      <td>-0.422885</td>\n",
-       "      <td>0.686635</td>\n",
-       "      <td>2031-11-15</td>\n",
-       "      <td>6.344249</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2024-01-16</td>\n",
-       "      <td>TICK009 BB</td>\n",
-       "      <td>BB</td>\n",
-       "      <td>-1.679160</td>\n",
-       "      <td>-1.899144</td>\n",
-       "      <td>-0.674185</td>\n",
-       "      <td>0.509269</td>\n",
-       "      <td>2028-01-09</td>\n",
-       "      <td>-0.949719</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2024-01-16</td>\n",
-       "      <td>TICK035 BB</td>\n",
-       "      <td>BB</td>\n",
-       "      <td>-1.752920</td>\n",
-       "      <td>-0.046660</td>\n",
-       "      <td>-1.116742</td>\n",
-       "      <td>0.133428</td>\n",
-       "      <td>2026-06-12</td>\n",
-       "      <td>2.743380</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>419</th>\n",
-       "      <td>2024-01-20</td>\n",
-       "      <td>TICK034 AA</td>\n",
-       "      <td>AA</td>\n",
-       "      <td>-0.952065</td>\n",
-       "      <td>0.085421</td>\n",
-       "      <td>-0.690457</td>\n",
-       "      <td>-2.687656</td>\n",
-       "      <td>2030-02-01</td>\n",
-       "      <td>3.775494</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>420</th>\n",
-       "      <td>2024-01-20</td>\n",
-       "      <td>TICK005 A</td>\n",
-       "      <td>A</td>\n",
-       "      <td>-0.488983</td>\n",
-       "      <td>-0.831111</td>\n",
-       "      <td>-0.607724</td>\n",
-       "      <td>-1.509591</td>\n",
-       "      <td>2024-03-31</td>\n",
-       "      <td>2.584561</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>421</th>\n",
-       "      <td>2024-01-20</td>\n",
-       "      <td>TICK007 A</td>\n",
-       "      <td>A</td>\n",
-       "      <td>-0.753803</td>\n",
-       "      <td>0.078284</td>\n",
-       "      <td>-1.811138</td>\n",
-       "      <td>-0.482287</td>\n",
-       "      <td>2032-07-05</td>\n",
-       "      <td>4.006690</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>422</th>\n",
-       "      <td>2024-01-20</td>\n",
-       "      <td>TICK032 AA</td>\n",
-       "      <td>AA</td>\n",
-       "      <td>0.267818</td>\n",
-       "      <td>-1.603792</td>\n",
-       "      <td>0.477184</td>\n",
-       "      <td>1.779072</td>\n",
-       "      <td>2024-05-24</td>\n",
-       "      <td>0.837745</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>423</th>\n",
-       "      <td>2024-01-20</td>\n",
-       "      <td>TICK019 AA</td>\n",
-       "      <td>AA</td>\n",
-       "      <td>-0.027150</td>\n",
-       "      <td>0.180841</td>\n",
-       "      <td>-0.834323</td>\n",
-       "      <td>0.065358</td>\n",
-       "      <td>2028-08-14</td>\n",
-       "      <td>5.584423</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>424 rows × 9 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "          date       ticker rating  feature_A  feature_B  feature_C  \\\n",
-       "0   2024-01-16  TICK013 BBB    BBB  -0.822462  -0.808287   1.322948   \n",
-       "1   2024-01-16  TICK042 BBB    BBB   0.393233  -1.110280  -0.200273   \n",
-       "2   2024-01-16   TICK040 BB     BB   0.191740   1.010309  -0.422885   \n",
-       "3   2024-01-16   TICK009 BB     BB  -1.679160  -1.899144  -0.674185   \n",
-       "4   2024-01-16   TICK035 BB     BB  -1.752920  -0.046660  -1.116742   \n",
-       "..         ...          ...    ...        ...        ...        ...   \n",
-       "419 2024-01-20   TICK034 AA     AA  -0.952065   0.085421  -0.690457   \n",
-       "420 2024-01-20    TICK005 A      A  -0.488983  -0.831111  -0.607724   \n",
-       "421 2024-01-20    TICK007 A      A  -0.753803   0.078284  -1.811138   \n",
-       "422 2024-01-20   TICK032 AA     AA   0.267818  -1.603792   0.477184   \n",
-       "423 2024-01-20   TICK019 AA     AA  -0.027150   0.180841  -0.834323   \n",
-       "\n",
-       "     feature_D     expiry     yield  \n",
-       "0    -0.431289 2029-07-25  3.313102  \n",
-       "1     0.085599 2026-03-11  3.254585  \n",
-       "2     0.686635 2031-11-15  6.344249  \n",
-       "3     0.509269 2028-01-09 -0.949719  \n",
-       "4     0.133428 2026-06-12  2.743380  \n",
-       "..         ...        ...       ...  \n",
-       "419  -2.687656 2030-02-01  3.775494  \n",
-       "420  -1.509591 2024-03-31  2.584561  \n",
-       "421  -0.482287 2032-07-05  4.006690  \n",
-       "422   1.779072 2024-05-24  0.837745  \n",
-       "423   0.065358 2028-08-14  5.584423  \n",
-       "\n",
-       "[424 rows x 9 columns]"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "dh.get_window('2024-01-20', window_size=5)"
+    "df = generate_fake_bond_trades( start_date=START_DATE, end_date=END_DATE )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "6dad7e31",
+   "execution_count": 6,
+   "id": "c263a947",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# all_dates = self.df.index.get_level_values(\"date\").unique().sort_values()\n",
-    "# end_idx = all_dates.get_loc(end_date)\n",
-    "# if end_idx + 1 < window_size:\n",
-    "#     raise ValueError(\"Not enough data for the requested window size.\")\n",
-    "\n",
-    "# # Get the rolling window of dates\n",
-    "# window_dates = all_dates[end_idx + 1 - window_size : end_idx + 1]\n",
-    "# return self.df.loc[self.df.index.get_level_values(\"date\").isin(window_dates)]"
+    "rwm = RollingWindowManager.from_flat( df, date_col='date', window_size=5 )"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "f61c6f9b",
+   "id": "3fc5c3f2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from datetime import date"
+    "res = rwm.get_all_window_dates()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "3cd82f74",
+   "execution_count": null,
+   "id": "ae187382",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = df_large.set_index(['date', 'ticker'])\n",
-    "all_dates = df.index.get_level_values(\"date\").unique().sort_values()\n",
-    "end_idx = all_dates.get_loc(\"2024-01-02\")"
+    "rwm.get_window_data()"
    ]
   }
  ],
