add: more preprocess funcs and excel exporter

--- a/docs/utils/testing.ipynb
+++ b/docs/utils/testing.ipynb
@@ -673,11 +673,65 @@
     "plt.tight_layout()\n",
     "plt.show()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "0c3d61eb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "from quantbullet.utils.reporting import ExcelExporter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "5262512d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "93bdca44",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame({\n",
+    "    'AAA': [1, 2, 3],\n",
+    "    'AA': [4, 5, 6],\n",
+    "    'A': [7, 8, 9],\n",
+    "    'BBB': [10, 11, 12],\n",
+    "    'Date': pd.date_range('2024-01-01', periods=3)\n",
+    "})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "8c4eb368",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(\n",
+    "    ExcelExporter( \"test.xlsx\" )\n",
+    "    .set_default_decimals(4)\n",
+    "    .set_default_date_format( \"yyyy-mm-dd\" )\n",
+    "    .add_sheet( df, \"Test Sheet\", round_cols={'AAA' : 0} )\n",
+    "    .save()\n",
+    ")"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "py311",
    "language": "python",
    "name": "python3"
   },
@@ -691,7 +745,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
