--- a/docs/model/weighted-distance-knn.ipynb
+++ b/docs/model/weighted-distance-knn.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "id": "7a2ed06e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -13,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "id": "f98d0c44",
    "metadata": {},
    "outputs": [],
@@ -26,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "id": "c277404c",
    "metadata": {},
    "outputs": [],
@@ -49,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "id": "64526b1f",
    "metadata": {},
    "outputs": [],
@@ -61,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 28,
    "id": "b7a984cb",
    "metadata": {},
    "outputs": [],
@@ -70,7 +79,7 @@
     "    estimator=FeatureScaledKNNRegressor(),\n",
     "    param_grid={\n",
     "        'n_neighbors': [1, 3, 5, 7, 9],\n",
-    "        'weights': ['uniform', 'distance'],\n",
+    "        'weights': ['uniform'],\n",
     "        'metrics': ['euclidean', 'mahalanobis'],\n",
     "        'feature_weights': [None],\n",
     "    },\n",
@@ -82,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 29,
    "id": "45551d14",
    "metadata": {},
    "outputs": [
@@ -90,16 +99,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fitting 5 folds for each of 20 candidates, totalling 100 fits\n"
+      "Fitting 5 folds for each of 10 candidates, totalling 50 fits\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<quantbullet.model_selection.optimizer.GridSearch at 0x17829e6fd10>"
+       "<quantbullet.model_selection.optimizer.GridSearch at 0x1a8917219d0>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -110,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 30,
    "id": "26808724",
    "metadata": {},
    "outputs": [
@@ -146,53 +155,53 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>1</th>\n",
        "      <td>None</td>\n",
        "      <td>euclidean</td>\n",
        "      <td>3</td>\n",
-       "      <td>distance</td>\n",
-       "      <td>-0.157483</td>\n",
-       "      <td>0.016937</td>\n",
+       "      <td>uniform</td>\n",
+       "      <td>-0.171741</td>\n",
+       "      <td>0.019716</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>15</th>\n",
+       "      <th>6</th>\n",
        "      <td>None</td>\n",
        "      <td>mahalanobis</td>\n",
-       "      <td>5</td>\n",
-       "      <td>distance</td>\n",
-       "      <td>-0.162730</td>\n",
-       "      <td>0.043660</td>\n",
+       "      <td>3</td>\n",
+       "      <td>uniform</td>\n",
+       "      <td>-0.178907</td>\n",
+       "      <td>0.048498</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>13</th>\n",
+       "      <th>7</th>\n",
        "      <td>None</td>\n",
        "      <td>mahalanobis</td>\n",
-       "      <td>3</td>\n",
-       "      <td>distance</td>\n",
-       "      <td>-0.163885</td>\n",
-       "      <td>0.045984</td>\n",
+       "      <td>5</td>\n",
+       "      <td>uniform</td>\n",
+       "      <td>-0.184177</td>\n",
+       "      <td>0.051585</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
+       "      <th>2</th>\n",
        "      <td>None</td>\n",
        "      <td>euclidean</td>\n",
        "      <td>5</td>\n",
-       "      <td>distance</td>\n",
-       "      <td>-0.165110</td>\n",
-       "      <td>0.023466</td>\n",
+       "      <td>uniform</td>\n",
+       "      <td>-0.186842</td>\n",
+       "      <td>0.027510</td>\n",
        "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>17</th>\n",
+       "      <th>8</th>\n",
        "      <td>None</td>\n",
        "      <td>mahalanobis</td>\n",
        "      <td>7</td>\n",
-       "      <td>distance</td>\n",
-       "      <td>-0.170239</td>\n",
-       "      <td>0.052808</td>\n",
+       "      <td>uniform</td>\n",
+       "      <td>-0.195956</td>\n",
+       "      <td>0.062516</td>\n",
        "      <td>5</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -200,22 +209,22 @@
        "</div>"
       ],
       "text/plain": [
-       "   feature_weights      metrics  n_neighbors   weights  mean_test_score  \\\n",
-       "3             None    euclidean            3  distance        -0.157483   \n",
-       "15            None  mahalanobis            5  distance        -0.162730   \n",
-       "13            None  mahalanobis            3  distance        -0.163885   \n",
-       "5             None    euclidean            5  distance        -0.165110   \n",
-       "17            None  mahalanobis            7  distance        -0.170239   \n",
+       "  feature_weights      metrics  n_neighbors  weights  mean_test_score  \\\n",
+       "1            None    euclidean            3  uniform        -0.171741   \n",
+       "6            None  mahalanobis            3  uniform        -0.178907   \n",
+       "7            None  mahalanobis            5  uniform        -0.184177   \n",
+       "2            None    euclidean            5  uniform        -0.186842   \n",
+       "8            None  mahalanobis            7  uniform        -0.195956   \n",
        "\n",
-       "    std_test_score  rank  \n",
-       "3         0.016937     1  \n",
-       "15        0.043660     2  \n",
-       "13        0.045984     3  \n",
-       "5         0.023466     4  \n",
-       "17        0.052808     5  "
+       "   std_test_score  rank  \n",
+       "1        0.019716     1  \n",
+       "6        0.048498     2  \n",
+       "7        0.051585     3  \n",
+       "2        0.027510     4  \n",
+       "8        0.062516     5  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,31 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "7f820489",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'feature_weights': None,\n",
-       " 'metrics': 'euclidean',\n",
-       " 'n_neighbors': 3,\n",
-       " 'weights': 'distance'}"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "gridSearchCvOptimizer.best_model().get_params()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 36,
    "id": "f02c109d",
    "metadata": {},
    "outputs": [],
@@ -260,17 +245,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 37,
    "id": "f1dfee60",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'mse': 0.0}"
+       "{'mse': 0.06956211023813165}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -281,83 +266,129 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "9eac4309",
+   "execution_count": 38,
+   "id": "effd924d",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fitting 5 folds for each of 16 candidates, totalling 80 fits\n",
-      "\n",
-      "📊 Grid Search Results:\n",
-      "feature_weights     metrics  n_neighbors  weights  mean_test_mse  std_test_mse  rank\n",
-      "           None   euclidean            3 distance       0.175532      0.032498     1\n",
-      "           None   euclidean            5 distance       0.177007      0.036711     2\n",
-      "           None mahalanobis            5 distance       0.184377      0.050798     3\n",
-      "           None mahalanobis            3 distance       0.184455      0.036285     4\n",
-      "           None   euclidean            3  uniform       0.194170      0.029669     5\n",
-      "           None   euclidean            5  uniform       0.197269      0.034193     6\n",
-      "           None mahalanobis            3  uniform       0.202558      0.037352     7\n",
-      "           None mahalanobis            5  uniform       0.205641      0.053098     8\n",
-      "           None   euclidean           10 distance       0.213274      0.050638     9\n",
-      "           None mahalanobis           10 distance       0.220298      0.072123    10\n",
-      "           None   euclidean           10  uniform       0.249171      0.055451    11\n",
-      "           None mahalanobis           10  uniform       0.253242      0.082561    12\n",
-      "           None mahalanobis           20 distance       0.296199      0.098025    13\n",
-      "           None   euclidean           20 distance       0.305766      0.063978    14\n",
-      "           None mahalanobis           20  uniform       0.354423      0.114504    15\n",
-      "           None   euclidean           20  uniform       0.371748      0.071002    16\n",
-      "\n",
-      "✅ Best Params: {'feature_weights': None, 'metrics': 'euclidean', 'n_neighbors': 3, 'weights': 'distance'}\n",
-      "📉 Test MSE: 0.19260992403514055\n"
-     ]
+     "data": {
+      "text/plain": [
+       "array([ 0.49671415, -0.1382643 ,  0.64768854])"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "\n",
-    "\n",
-    "# GridSearch\n",
-    "param_grid = {\n",
-    "    'n_neighbors': [3, 5, 10, 20],\n",
-    "    'metrics': ['euclidean', 'mahalanobis'],\n",
-    "    'weights': ['uniform', 'distance'],\n",
-    "    'feature_weights': [None]\n",
-    "}\n",
-    "\n",
-    "grid = GridSearchCV(\n",
-    "    weightedDistanceKNRegressor(),\n",
-    "    param_grid,\n",
-    "    scoring='neg_mean_squared_error',\n",
-    "    cv=5,\n",
-    "    verbose=1\n",
-    ")\n",
-    "\n",
-    "grid.fit(X_train, y_train)\n",
-    "\n",
-    "# Result summary\n",
-    "results_df = pd.DataFrame(grid.cv_results_)\n",
-    "summary_df = pd.json_normalize(results_df['params']).assign(\n",
-    "    mean_test_mse=-results_df['mean_test_score'],\n",
-    "    std_test_mse=results_df['std_test_score'],\n",
-    "    rank=results_df['rank_test_score']\n",
-    ").sort_values(by='mean_test_mse')\n",
-    "\n",
-    "print(\"\\n📊 Grid Search Results:\")\n",
-    "print(summary_df.to_string(index=False))\n",
-    "\n",
-    "# Final test evaluation\n",
-    "best_model = grid.best_estimator_\n",
-    "y_pred = best_model.predict(X_test)\n",
-    "print(\"\\n✅ Best Params:\", grid.best_params_)\n",
-    "print(\"📉 Test MSE:\", mean_squared_error(y_test, y_pred))\n"
+    "X[0, :]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "de223a2e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>request_index</th>\n",
+       "      <th>prediction</th>\n",
+       "      <th>neighbor_index</th>\n",
+       "      <th>neighbor_rank</th>\n",
+       "      <th>distance</th>\n",
+       "      <th>neighbor_y</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.496714</td>\n",
+       "      <td>-0.138264</td>\n",
+       "      <td>0.647689</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.91086</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.144737</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.482472</td>\n",
+       "      <td>-0.223463</td>\n",
+       "      <td>0.714000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.91086</td>\n",
+       "      <td>61</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.108105</td>\n",
+       "      <td>0.775171</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.558327</td>\n",
+       "      <td>0.076005</td>\n",
+       "      <td>0.538756</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.91086</td>\n",
+       "      <td>420</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.248330</td>\n",
+       "      <td>0.812672</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          0         1         2  request_index  prediction  neighbor_index  \\\n",
+       "0  0.496714 -0.138264  0.647689              0     0.91086               0   \n",
+       "1  0.482472 -0.223463  0.714000              0     0.91086              61   \n",
+       "2  0.558327  0.076005  0.538756              0     0.91086             420   \n",
+       "\n",
+       "   neighbor_rank  distance  neighbor_y  \n",
+       "0              0  0.000000    1.144737  \n",
+       "1              1  0.108105    0.775171  \n",
+       "2              2  0.248330    0.812672  "
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "best_model.predict_with_neighbors( X[0, :].reshape(1, -1) )"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "py311",
    "language": "python",
    "name": "python3"
   },
@@ -371,7 +402,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
