--- a/docs/model/weighted-distance-knn.ipynb
+++ b/docs/model/weighted-distance-knn.ipynb
@@ -388,7 +388,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py311",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -402,7 +402,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
