--- a/docs/utils/rolling-window-backtest.ipynb
+++ b/docs/utils/rolling-window-backtest.ipynb
@@ -855,7 +855,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "py311",
    "language": "python",
    "name": "python3"
   },
@@ -869,7 +869,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
