fix(reporting): clean up

--- a/docs/utils/excel-writer.ipynb
+++ b/docs/utils/excel-writer.ipynb
@@ -8,7 +8,7 @@
    "outputs": [],
    "source": [
     "from quantbullet.utils.data import generate_fake_bond_trades\n",
-    "from quantbullet.utils.reporting import ExcelExporter, ColumnFormat\n",
+    "from quantbullet.reporting import ExcelExporter, ColumnFormat\n",
     "from datetime import date"
    ]
   },
