feat(reporting): excel exporter supports omitting header and row col offset

--- a/docs/utils/excel-writer.ipynb
+++ b/docs/utils/excel-writer.ipynb
@@ -51,14 +51,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "6e5b7cdc",
    "metadata": {},
    "outputs": [],
    "source": [
     "(\n",
     "    ExcelExporter('fake_bond_trades.xlsx')\n",
-    "    .add_sheet('Bond Trades', data, column_formats=col_formats, wrap_header=True)\n",
+    "    .add_sheet('Bond Trades', data, column_formats=col_formats, wrap_header=True, include_header=True, start_col=1, start_row=1)\n",
+    "    .add_sheet('Bond Trades Offset', data, column_formats=col_formats, wrap_header=True, include_header=False, start_col=2, start_row=20)\n",
     "    .save()\n",
     ")"
    ]
