take out the linear product model to be a separate submodule

--- a/docs/experiments/linear_product_reg_model_prod.ipynb
+++ b/docs/experiments/linear_product_reg_model_prod.ipynb
@@ -115,7 +115,17 @@
        "      <th>x1_9_10</th>\n",
        "      <th>x1_10_11</th>\n",
        "      <th>x1_11_12</th>\n",
-       "      <th>...</th>\n",
+       "      <th>x1_12_13</th>\n",
+       "      <th>x1_13_14</th>\n",
+       "      <th>x1_14_15</th>\n",
+       "      <th>x1_gt_15</th>\n",
+       "      <th>x2_bias</th>\n",
+       "      <th>x2_le_14</th>\n",
+       "      <th>x2_14_15</th>\n",
+       "      <th>x2_15_16</th>\n",
+       "      <th>x2_16_17</th>\n",
+       "      <th>x2_17_18</th>\n",
+       "      <th>x2_18_19</th>\n",
        "      <th>x2_19_20</th>\n",
        "      <th>x2_20_21</th>\n",
        "      <th>x2_21_22</th>\n",
@@ -141,7 +151,17 @@
        "      <td>10.000000</td>\n",
        "      <td>11.0</td>\n",
        "      <td>11.490142</td>\n",
-       "      <td>...</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>14.00000</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>17.000000</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>19.000000</td>\n",
        "      <td>20.000000</td>\n",
        "      <td>21.0</td>\n",
        "      <td>22.000000</td>\n",
@@ -165,7 +185,17 @@
        "      <td>9.585207</td>\n",
        "      <td>10.0</td>\n",
        "      <td>11.000000</td>\n",
-       "      <td>...</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>14.00000</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>16.533936</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>18.000000</td>\n",
        "      <td>19.000000</td>\n",
        "      <td>20.0</td>\n",
        "      <td>21.000000</td>\n",
@@ -189,7 +219,17 @@
        "      <td>10.000000</td>\n",
        "      <td>11.0</td>\n",
        "      <td>11.943066</td>\n",
-       "      <td>...</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>14.00000</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>17.000000</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>19.000000</td>\n",
        "      <td>20.000000</td>\n",
        "      <td>21.0</td>\n",
        "      <td>21.726312</td>\n",
@@ -213,7 +253,17 @@
        "      <td>10.000000</td>\n",
        "      <td>11.0</td>\n",
        "      <td>12.000000</td>\n",
-       "      <td>...</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>14.56909</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>17.000000</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>18.142285</td>\n",
        "      <td>19.000000</td>\n",
        "      <td>20.0</td>\n",
        "      <td>21.000000</td>\n",
@@ -237,7 +287,17 @@
        "      <td>9.297540</td>\n",
        "      <td>10.0</td>\n",
        "      <td>11.000000</td>\n",
-       "      <td>...</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>14.00000</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>17.000000</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>19.000000</td>\n",
        "      <td>19.017792</td>\n",
        "      <td>20.0</td>\n",
        "      <td>21.000000</td>\n",
@@ -251,30 +311,15 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 31 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   x1_bias  x1_le_4  x1_4_5  x1_5_6  x1_6_7  x1_7_8  x1_8_9    x1_9_10  \\\n",
-       "0      1.0      4.0     5.0     6.0     7.0     8.0     9.0  10.000000   \n",
-       "1      1.0      4.0     5.0     6.0     7.0     8.0     9.0   9.585207   \n",
-       "2      1.0      4.0     5.0     6.0     7.0     8.0     9.0  10.000000   \n",
-       "3      1.0      4.0     5.0     6.0     7.0     8.0     9.0  10.000000   \n",
-       "4      1.0      4.0     5.0     6.0     7.0     8.0     9.0   9.297540   \n",
-       "\n",
-       "   x1_10_11   x1_11_12  ...   x2_19_20  x2_20_21   x2_21_22  x2_22_23  \\\n",
-       "0      11.0  11.490142  ...  20.000000      21.0  22.000000      23.0   \n",
-       "1      10.0  11.000000  ...  19.000000      20.0  21.000000      22.0   \n",
-       "2      11.0  11.943066  ...  20.000000      21.0  21.726312      22.0   \n",
-       "3      11.0  12.000000  ...  19.000000      20.0  21.000000      22.0   \n",
-       "4      10.0  11.000000  ...  19.017792      20.0  21.000000      22.0   \n",
-       "\n",
-       "    x2_23_24  x2_24_25  x2_gt_25  x3_0  x3_1  x3_2  \n",
-       "0  23.091784      24.0      25.0   0.0   1.0   0.0  \n",
-       "1  23.000000      24.0      25.0   0.0   0.0   1.0  \n",
-       "2  23.000000      24.0      25.0   0.0   0.0   1.0  \n",
-       "3  23.000000      24.0      25.0   0.0   0.0   1.0  \n",
-       "4  23.000000      24.0      25.0   0.0   1.0   0.0  \n",
+       "   x1_bias  x1_le_4  x1_4_5  x1_5_6  ...  x2_gt_25  x3_0  x3_1  x3_2\n",
+       "0      1.0      4.0     5.0     6.0  ...      25.0   0.0   1.0   0.0\n",
+       "1      1.0      4.0     5.0     6.0  ...      25.0   0.0   0.0   1.0\n",
+       "2      1.0      4.0     5.0     6.0  ...      25.0   0.0   0.0   1.0\n",
+       "3      1.0      4.0     5.0     6.0  ...      25.0   0.0   0.0   1.0\n",
+       "4      1.0      4.0     5.0     6.0  ...      25.0   0.0   1.0   0.0\n",
        "\n",
        "[5 rows x 31 columns]"
       ]
@@ -315,9 +360,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from quantbullet.optimizer import LinearProductModelScipy\n",
+    "from quantbullet.linear_product_model import LinearProductRegressorScipy\n",
     "\n",
-    "lprm = LinearProductModelScipy( xtol=1e-12, gtol=1e-12, ftol=1e-12 )"
+    "lprm = LinearProductRegressorScipy( xtol=1e-12, gtol=1e-12, ftol=1e-12 )"
    ]
   },
   {
@@ -337,7 +382,7 @@
     {
      "data": {
       "text/plain": [
-       "<quantbullet.optimizer.linear_product_model.LinearProductModelScipy at 0x1d1e4604d10>"
+       "<quantbullet.linear_product_model.regressor.LinearProductRegressorScipy at 0x12fd3e5a910>"
       ]
      },
      "execution_count": 8,
@@ -437,9 +482,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from quantbullet.optimizer import LinearProductModelOLS\n",
+    "from quantbullet.linear_product_model import LinearProductRegressorBCD\n",
     "\n",
-    "lprm_ols = LinearProductModelOLS()"
+    "lprm_ols = LinearProductRegressorBCD()"
    ]
   },
   {
@@ -452,19 +497,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iteration 1/10, MSE: 0.5270\n",
-      "Iteration 2/10, MSE: 0.5269\n",
-      "Iteration 3/10, MSE: 0.5269\n",
-      "Iteration 4/10, MSE: 0.5269\n",
-      "Iteration 5/10, MSE: 0.5269\n",
-      "Iteration 6/10, MSE: 0.5269\n",
-      "Early stopping at iteration 6 with MSE: 0.5269\n"
+      "Iteration 1/10, Loss: 0.5270\n",
+      "Iteration 2/10, Loss: 0.5269\n",
+      "Iteration 3/10, Loss: 0.5269\n",
+      "Iteration 4/10, Loss: 0.5269\n",
+      "Iteration 5/10, Loss: 0.5269\n",
+      "Iteration 6/10, Loss: 0.5269\n",
+      "Early stopping at iteration 6 with Loss: 0.5269\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<quantbullet.optimizer.linear_product_model.LinearProductModelOLS at 0x1d1e5d2c090>"
+       "<quantbullet.linear_product_model.regressor.LinearProductRegressorBCD at 0x12fd3ed1a10>"
       ]
      },
      "execution_count": 13,
